// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiService getAccounts should return the result from the Api in a promise 1`] = `undefined`;

exports[`ApiService getAccounts should use the HttpService to call the expected url 1`] = `
Array [
  Array [
    "https://kata.getmansa.com/accounts",
  ],
]
`;

exports[`ApiService getOldestTransaction should return the result from the Api in a promise 1`] = `undefined`;

exports[`ApiService getOldestTransaction should use the HttpService to call the expected url 1`] = `
Array [
  Array [
    "https://kata.getmansa.com/accounts",
  ],
  Array [
    "https://kata.getmansa.com/accounts",
  ],
  Array [
    "https://kata.getmansa.com/accounts/accountId/transactions?from=2020-08-30T00%3A00%3A00.000Z&to=2020-01-01T00%3A00%3A00.000Z",
  ],
  Array [
    "https://kata.getmansa.com/accounts/accountId/transactions?from=2020-08-30T00%3A00%3A00.000Z&to=2020-01-01T00%3A00%3A00.000Z",
  ],
  Array [
    "https://kata.getmansa.com/accounts/accountId/transactions",
  ],
]
`;

exports[`ApiService getTransactions should return the result from the Api in a promise 1`] = `undefined`;

exports[`ApiService getTransactions should use the HttpService to call the expected url 1`] = `
Array [
  Array [
    "https://kata.getmansa.com/accounts",
  ],
  Array [
    "https://kata.getmansa.com/accounts",
  ],
  Array [
    "https://kata.getmansa.com/accounts/accountId/transactions?from=2020-08-30T00%3A00%3A00.000Z&to=2020-01-01T00%3A00%3A00.000Z",
  ],
]
`;
